Fix: Added spacing between underline and the text

--- a/v2/src/components/OrganisationDetails/style.scss
+++ b/v2/src/components/OrganisationDetails/style.scss
@@ -14,6 +14,7 @@
 
 .add-credential {
     text-decoration: underline;
+    text-underline-offset: 0.25rem;
     font-size: 0.825rem;
     color: #d80606;
     cursor: pointer;
@@ -21,6 +22,7 @@
 
 .view-credential {
     text-decoration: underline;
+    text-underline-offset: 0.25rem;
     font-size: 0.825rem;
     color: #000;
     cursor: pointer;
